feat: エントリのサイト名では実際の値を使う
